k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8080
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8081
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8082
